@@ -2,6 +2,7 @@
 	* forked_player.cc: don't go into infinite loop when player fails
 	* shapeid.*: minor cleanup
 	* objs/egg.cc: prevent egg from retriggering immediately
+	* gamerend.cc, Gump_manager.*: draw modal gumps even when in dont_move
 
 2003-02-20  Jeff Freedman  <jeff@amy.nerble.net>
 
